<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_addproduct_fragment"
        android:padding="10dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="@color/buttonColor"
        android:textStyle="bold"/>


    <ImageView
        android:id="@+id/imageViewProductUploadImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="5dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="126dp"
        android:background="@drawable/textfield"
        android:src="@drawable/product_image_upload"

        />

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="260dp"
        android:padding="10dp"
        android:hint="@string/text_hint_product_name"
        android:background="@drawable/textfield"/>

    <EditText
        android:id="@+id/editTextProductDescription"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="310dp"
        android:padding="10dp"
        android:hint="@string/text_hint_product_description"
        android:inputType="textMultiLine"
        android:background="@drawable/textfield"/>

    <Spinner
        android:id="@+id/spinnerProductCategory"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/textfield"
        android:entries="@array/spinner_enteries"
        android:prompt="@string/text_prompt"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/editTextProductPrice"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="450dp"
        android:padding="10dp"
        android:hint="@string/text_hint_product_price"
        android:inputType="numberDecimal"
        android:background="@drawable/textfield"/>

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/white"
        android:text="@string/text_add_product" />

</FrameLayout>