<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"

    tools:context=".ProfileFragment">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_profile_fragment"
        android:textSize="24sp"
        android:textColor="@color/buttonColor"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageViewProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="105dp"
        android:background="@drawable/textfield"
        android:src="@drawable/image_upload"

        />
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="310dp"
        android:padding="10dp"
        android:hint="@string/text_hint_firstname"
        android:background="@drawable/textfield"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="370dp"
        android:hint="@string/text_hint_lastname"
        android:padding="10dp"
        android:background="@drawable/textfield"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="430dp"
        android:hint="@string/text_hint_email"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        android:background="@drawable/textfield"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="490dp"
        android:hint="@string/text_hint_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:background="@drawable/textfield"/>


    <Button
        android:id="@+id/buttonUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/white"
        android:text="@string/text_profile_update" />


</FrameLayout>
