<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewForMessages"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="8dp">


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    >



    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="115dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/textViewSellerMessage"
        android:text="@string/text_item_name"
        android:paddingLeft="10dp"

        />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/product_image_upload"
        android:id="@+id/imageViewMessagePicture"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="119dp"
        android:id="@+id/textViewApproved"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/buttons"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="119dp"
        android:text="@string/text_approve"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/buttonApprove"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/buttons"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="245dp"
        android:text="@string/text_reject"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/buttonReject"/>



</RelativeLayout>

</androidx.cardview.widget.CardView>